style.css
body {
    margin: 0px;
    padding: 0px;
    font-family: Roboto;

}

section .hero-section {
    background-color: #1f2937;
    font-family: Roboto;
    padding: 8px;
    max-height: fit-content;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-bottom: 100px;
}
/* hero section Tablet device breakpoint */
@media screen and (max-width: 860px)  {
    section .hero-content {
        display: flex;
        flex-wrap: wrap;
    }
    .hero-text {
        text-align: center;
    }

    section .hero-content img {
        max-width: 50vw;
        height: auto;
    }
    
}
/*hero section Mobile device breakpoint*/
@media screen and (max-width: 500px) {
    
}

.hero-text p {
    margin-bottom: 20px;
}



nav li {
    font-size: 18px;
    color: #f9faf8;
    list-style-type: none;
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0px;
    padding: 0px;
    width: 100%;
    max-width: 817.67px;
    margin-bottom: 20px;
    
}

nav ul {
    display: flex;
    gap: 20px;
}

span {
    font-size: 24px;
    color: #f9faf8;
}

.hero-text h1 {
    font-size: 48px;
    color: #f9faf8;
    font-weight: 900;
}

.hero-text p, button {
    font-size: 18px;
    color: #f9faf8;
}

button {
    background-color: #3882f6;
    border-radius: 5px;
    width: 100px;
    height: 30px;
    font-weight: bolder;
    border: none;
}

.hero-content {
    display: flex;
    justify-content: space-between;
    gap: 50px;
    align-items: flex-start;
    justify-content: center;
    align-items: center;

}

.hero-text p {
    max-width: 500px;
}

.info-section {
    padding: 8px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    padding-bottom: 100px;
}

.info-section h2 {
    font-size: 36px;
    color: #1f2937;
    font-weight: 900;
    font-family: Roboto;
    padding-bottom: 20px;
}

.boxes-container {
    display: flex;
    justify-content: space-between;
    gap: 25px;

}

.boxes-container p {
    max-width: 60vw;
    margin-top: 20px;
}

@media screen and (max-width: 755px) {
    .boxes-container {
        flex-direction: column;
    }

    .boxes-container .box-container img { 
        max-width: 60vw;
        height: auto;

    }

    .box-container {
        align-items: center;
        display: flex;
        flex-direction: column;
    }



}
    




.quote-section {
    background-color: #e5e7eb5b;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: left;
    height: 400px;
}

.quote-content {
    max-width: 795px;
}

.quote-content p {
    text-align: end;
    padding-top: 20px;
}

.quote-content h1 {
    font-size: 36px;
    color: #1f2937;
    font-weight: 300;
    font-style: italic;

}

.CTA-section {
    height: 300px;
    align-content: center;
    text-align: center;
}

.CTA-button {
    width: 150px;
}

.cta-flex-container {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #3882f6;
    width: 750px;
    justify-content: space-between;
    padding: 20px;
    text-align: left;
    border-radius: 5px;
}

.CTA-section {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
}

.cta-text-container {
    color: #e5e7eb;
    font-size: 16px;
    margin: 0px;
}

.cta-text-container, p, h3 {
    margin: 5px;
}




.CTA-section button {
    border: #e5e7eb 2px solid;
}

footer {
    text-align: center;
    background-color: #1f2937;
    color: #e5e7eb;
    padding: 15px;
    font-size: 15px;
}

